--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.1">
 <link rel="stylesheet" href="style.css">
-<title>&#9827; Road to Reality &#9827;</title>
+<title>aboutme - acin.space</title>
  <body>
 	  <div class="content">
       <h1>about me</h1>
