--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Road to Reality</title>
+	<title>acin.space</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 	</head>
 
