--- a/questions.html
+++ b/questions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>&#9827; Road to Reality &#9827;</title>
+    <title>questions - acin.space</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
