--- a/setup.html
+++ b/setup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>&#9827; Road to Reality &#9827;</title>
+    <title>setup acin.site</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 	</head>
 
