--- a/setup.html
+++ b/setup.html
@@ -23,7 +23,7 @@
 <h2>peripherals</h2>
 <p>&#x2022; headphones - Koss Porta Pro w/ Yaxi Pads</p>
 <p>&#x2022; iems - Moondrop Chu</p>
-<p>&#x2022; Amp/Dac Moondrop Click</p>
+<p>&#x2022; Amp/Dac - Moondrop Click</p>
 <p>&#x2022; mouse - Logitech G Pro Superlight (white)</p>
 <p>&#x2022; mic - Behringer XM8500</p>
 <h2>Software</h2>
