--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="content">
 
 
-<h1>Road to Reality.</h1>
+<h1>acin.space</h1>
 <p>hey welcome to my site! have a look at my <a href="setup.html">setup</a> or more <a href="aboutme.html">aboutme</a>
 
 </p>
