--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
         <p>&#x2022; insurgency</p>
     <h2>links</h2>
         <p>&#x2022; <a href="https://twitch.tv/acin">twitch</a></p>
-        <p>&#x2022; <a href="links.html">youtube</a></p>
+        <p>&#x2022; <a href="https://youtube.com/c/acihn">youtube</a></p>
         <p>&#x2022; <a href="https://steamcommunity.com/id/acihn">steam</a></p>
         <p>&#x2022; <a href="https://steamcommunity.com/tradeoffer/new/?partner=416784267&token=K8k3jJS3">steam trade link</a></p>
         <p>&#x2022; <a href="https://github.com/qd8h">github</a></p>
