--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,7 @@
         <p>&#x2022;  <a>discord - acin#0001</a></p>
         <p>&#x2022;  <a href="https://deskto.ps/u/acin">deskto.ps</a></p>
         <p>&#x2022;  <a href="https://www.last.fm/user/ACIHN">last.fm</a></p>
+        <p>&#x2022;  <a href="https://matrix.to/#/#main:matrix.acin.space">matrix instance</a></p>
 
     </header>
     <a href="index.html">&lt; BACK TO THE MAIN PAGE &gt;</a>
