--- a/setup.html
+++ b/setup.html
@@ -32,7 +32,7 @@
 <p>alacritty</p>
 <p>vscodium</p>
 <p>i3-gaps</p>
-<img src="desktop.png"width="600" >
+<img src="setup.png"width="600" >
 <a href="index.html">&lt; BACK TO THE MAIN PAGE &gt;</a>
 </div>
 </body>
