--- a/aboutme.html
+++ b/aboutme.html
@@ -24,10 +24,11 @@
         <p>&#x2022; <a href="https://steamcommunity.com/id/acihn">steam</a></p>
         <p>&#x2022; <a href="https://steamcommunity.com/tradeoffer/new/?partner=416784267&token=K8k3jJS3">steam trade link</a></p>
         <p>&#x2022; <a href="https://github.com/qd8h">github</a></p>
-        <p>&#x2022;  <a>discord - acin#0001</a></p>
+        <p>&#x2022;  <a>discord - acin#0383</a></p>
         <p>&#x2022;  <a href="https://deskto.ps/u/acin">deskto.ps</a></p>
         <p>&#x2022;  <a href="https://www.last.fm/user/ACIHN">last.fm</a></p>
         <p>&#x2022;  <a href="https://matrix.to/#/#main:matrix.acin.space">matrix instance</a></p>
+        <p>&#x2022;  <a>minecraft server; mc.acin.space</a></p>
 
     </header>
     <a href="index.html">&lt; BACK TO THE MAIN PAGE &gt;</a>
