--- a/setup.html
+++ b/setup.html
@@ -14,6 +14,7 @@
 <p>&#x2022; ssd2 - Patriot Burst Elite - 960GB</p>
 <p>&#x2022; ram - OEM 2x16GB 2666Mhz ECC DDR4</p>
 <p>&#x2022; gpu - Nvidia Quadro M6000 12GB</p>
+<p>&#x2022; gpu 2 - Nvidia Geforce GT 730 2GB</p>
 
 <br/>
 <h2>hardware</h2>
@@ -33,6 +34,7 @@
 <p>vscodium</p>
 <p>i3-gaps</p>
 <img src="setup.png"width="600" >
+
 <a href="index.html">&lt; BACK TO THE MAIN PAGE &gt;</a>
 </div>
 </body>
